# p2p-network

./: Cargo.toml  README.md  fibonacci.rs
crates/citrea-p2p/: .env.example  Cargo.toml  README.md
crates/citrea-p2p/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  logging.rs  message.rs  network.rs  types.rs
crates/messages/: Cargo.toml
crates/messages/src/: blocks.rs  lib.rs  proofs.rs  transactions.rs  types.rs
crates/network/: Cargo.toml
crates/network/src/: config.rs  discovery.rs  handler.rs  lib.rs  service.rs  transport.rs
crates/sync/: Cargo.toml
crates/sync/src/: config.rs  lib.rs  pipeline.rs  service.rs  storage.rs  types.rs
