[workspace]
members = [
    "crates/core",
    "crates/messages",
    "crates/network",
    "crates/sync",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Citrea Team"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
