[package]
name = "sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
core_crate = { path = "../core", package = "core" }
messages = { path = "../messages" }
network = { path = "../network" }
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
futures.workspace = true 